<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btns_container"/>

    <RelativeLayout
        android:id="@+id/btns_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <Button
            android:id="@+id/btn_start"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/StartButtonTheme"
            android:text="@string/btn_start"
            android:textColor="@color/colorBtnText"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/btn_stop"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/StopButtonTheme"
            android:textColor="@color/colorBtnText"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>