<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_color"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:civ_fill_color="@color/colorItemRed"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/item_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/item_color"
        android:layout_toEndOf="@id/item_color"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:layout_centerVertical="true"/>

</RelativeLayout>